# learning

./: AVL_Tree.c  Binary_Tree.c  CMakeLists.txt  CircularStructBuffer.c  C言語高速化メモ.md  DataBuffer_withHash.c  ExeFunc.c  Fisher_Yates_shuffle.c  Hash_Table_chain.c  Hash_Table_openaddress.c  LCG_random.c  Linear_Linked_List.c  List_practice.c  Queue.c  README.md  Run.sh  SIMD_test  SIMD_test.c  arm_neon_practice.c  array_list.c  ascii_graph.c  bit_string.c  bitcount.c  color2excel.c  common.h  concatenate_csv_horizontally.c  conways_life_game.c  csv_utils.c  csv_utils.h  custom_memory_allocater.c  filter_gprof.awk  fixed_list_test.c  gprof2graph.py  machine_sim.c  makefileA.mk  makefileB.mk  memory_allocate.c  memory_pool.c  plot_script.py  practice3.c  (+13 more)
C2elacanth/: Compile.sh  Makefile  Run.sh  testCompile.sh  workspace.code-workspace
C2elacanth/analysis/: custom_common.h  library_functions.h  menu.c  start_function.c
C2elacanth/analysis_library/No6/: No6_Erase.c
C2elacanth/analysis_library/No8/: No8_common.c
C2elacanth/analysis_library/No8/Erase_test/: Erase_Discription.md
C2elacanth/analysis_library/No_6/: No_6_Program.c
C2elacanth/analysis_library/No_8/: No_8_common.c
C2elacanth/analysis_library/No_8/Erase_test/: Erase_Discription.md  No_8_Erase.c
C2elacanth/analysis_library/No_8/Program_test/: No_8_Program.c
C2elacanth/body/: custom_common.h  library_functions.h  menu.c  various_function.c
C2elacanth/dev_program/TestFunction/: 00_general_sort.c  01_machine_sim_2.c  02_machine_sim_3.c  03_Parallel_Operation.c  04_setjmp_longjmp.c  05_function_queue.c  06_Btree.c  07_MemoryPool.c  08_union.c  09_pthread_test.c  10_pthread_test_wrap.c  11_Segment_Integral.c  12_fixbit.c  13_curving_rate.c
C2elacanth/dev_program/oasobi/: 00_change_func_purpose.c  01_conways_life_game.c  05_get_multi_Blocklist.c  06_mandelbrot.c  08_typedef_functionptr.c  09_separate_value.c  10_test_stash.c  11_builtin_expect.c  13_DNA_database.c  14_highspeed_menu.c  15_improved_menu.c  16_Shuffle_Rate_Menu.c  17_command_array.c  18_state_machine_test.c  19_bool_or_int.c  20_StateMachine.c  Directory.c  WaferMapping.c  custom_scanf.c  general_sort.c  malloc_bench.c
C2elacanth/src/: common.h  main.c  src_func.c
Coelacanth/: Compile.sh  create_include.sh  makefile.mk  setting.conf  workspace.code-workspace
Coelacanth/libc/: example.c  simple.c
Coelacanth/libc/Test_System/: Directory.c  WaferMapping.c  change_func_purpose.c  custom_scanf.c  general_sort.c  get_multi_Blocklist.c  mandelbrot.c
Coelacanth/src/: coelacanth.c  common_func.h  function.c  library_functions.h
Python_script/: plot_csv.py  pygwalker_test.ipynb
random_select/: common_determination.h  rand_determination.c
technical_training/: interrupt_func.c  interrupt_func2.c  interrupt_func3.c  libmaze.c  libmaze.h  main.c  struct_size.c
